# CompanionEngine

./: .gitignore  .gitlab-ci.yml  .gitmodules  Doxyfile  README.md  conanfile.txt
code/: CMakeLists.txt  conanfile.txt  generate_sources.py
code/assets/: Laser(Enemy).mtl  Laser(Player).mtl  RadarBox.mtl  SpaceShip1.mtl  SpaceShip2.mtl  SpaceShip3.mtl  StarSparrow1.fbx  playerShip.mtl
code/assets/Models/: Ball.fbx
code/assets/Models/SpaceShips/: CarrierCombined.fbx  MEnemy03.fbx  StarSparrow1.fbx
code/assets/Models/SpaceStation/: Module1.fbx  Module10.fbx  Module11.fbx  Module12.fbx  Module13.fbx  Module14.fbx  Module15.fbx  Module3.fbx  Module4.001.fbx  Module4.fbx  Module5.fbx  Module6.fbx  Module7.fbx  Module8.fbx  Module9.fbx
code/assets/SpaceShip/: MainFrame.mtl  ScreenBottomMiddle.mtl
code/assets/shaders/: UIFragmentShader.glsl  fragmentShader.glsl  lightFragmentShader.glsl  unlitFragmentShader.glsl  vertexShader.glsl
code/codeGenerators/: keywords.py
code/docs/config/: doxygenConfig
code/engine/: CMakeLists.txt  generate_sources.py
code/engine/codeGenerators/: cppbuilder.py  enumScanner.py  keywords.py
code/engine/include/: Events.h
code/engine/include/FileManager/: FileManager.h
code/engine/include/GraphicsEngine/: Model.h  camera.h  mesh.h
code/engine/include/InputSystem/: InputManager.h
code/engine/include/Tools/: Grid.h
code/engine/include/engine/: Game.h  Scene.h  System.h  Time.h
code/engine/include/engine/ECS/: Component.h  Flags.h  Registry.h  System.h
code/engine/include/engine/EntityComponentSystem/: Component.h  ComponentManager.h  Entity.h  EntityComponentSystem.h  EntityManager.h  System.h  ecs.h
code/engine/include/engine/FileManager/: FileManager.h
code/engine/include/engine/GraphicsEngine/: GraphicsSystem.h  Model.h  Scene.h  Transform.h  camera.h  mesh.h  shader.h
code/engine/include/engine/GraphicsEngine/Components/: Camera.h  Model.h  Skybox.h  Transform.h
code/engine/include/engine/GraphicsEngine/Systems/: GraphicsSystem.h  ModelRenderer.h  SkyboxRenderer.h
code/engine/include/engine/GraphicsEngine/Utils/: CameraUtils.h  ModelUtils.h  SkyboxUtils.h  TransformUtils.h
code/engine/include/engine/Physics/: PhysicsScene.h
code/engine/include/engine/Physics/Components/: RigidBody.h
code/engine/include/engine/Physics/System/: PhysicsSystem.h  RigidBodyUtils.h
code/engine/include/engine/SoundSystem/: AudioListener.h  AudioSource.h  AudioSourceUtils.h
code/engine/include/engine/Systems/ECS/: Component.h  Flags.h  Registry.h
code/engine/include/engine/Systems/FileManager/: FileManager.h
code/engine/include/engine/Systems/Graphics/: Scene.h  mesh.h  shader.h
code/engine/include/engine/Systems/Graphics/Components/: Camera.h  DirectionLight.h  Light.h  Material.h  Model.h  PointLight.h  Skybox.h  SpotLight.h  Text.h  Transform.h  UI.h
code/engine/include/engine/Systems/Graphics/Utils/: CameraUtils.h  ModelUtils.h  SkyboxUtils.h  TransformUtils.h  TransformationUtils.h
code/engine/include/engine/Systems/Input/: InputGroup.h  InputManager.h
code/engine/include/engine/Systems/Physics/: PhysicsSystem.h
code/engine/include/engine/Systems/Physics/Components/: RigidBody.h  Shapes.h  TriggerEvents.h
code/engine/include/engine/Systems/Sound/: AudioListener.h  AudioSource.h  AudioSourceUtils.h  AudioSystem.h
code/engine/include/engine/Tools/: CubicNode.h  Grid.h
code/engine/include/engine/ecs/: Component.h  ComponentManager.h  Entity.h  EntityManager.h
code/engine/src/: Context.cpp  Game.cpp
code/engine/src/ECS/: CleanUpSystem.cpp
code/engine/src/EntityComponentSystem/: ComponentManager.cpp  EntityManager.cpp
code/engine/src/FileManager/: FileManager.cpp
code/engine/src/GraphicsEngine/: GraphicsSystem.cpp  GraphicsSystem.h  Model.cpp  Scene.cpp  Transform.cpp  camera.cpp  mesh.cpp  shader.cpp
code/engine/src/GraphicsEngine/Components/: Transform.cpp
code/engine/src/GraphicsEngine/Systems/: GraphicsSystem.cpp
code/engine/src/GraphicsEngine/Utils/: TransformUtils.cpp
code/engine/src/InputSystem/: InputManager.cpp
code/engine/src/Systems/FileManager/: Cache.h  FileManager.cpp  FontLoader.cpp  FontLoader.h  ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp  TextureLoader.h
code/engine/src/Systems/Graphics/: GraphicsSystem.cpp  GraphicsSystem.h  LightingSystem.cpp  LightingSystem.h  ModelData.h  TransformSystem.cpp  TransformSystem.h  mesh.cpp  shader.cpp
code/engine/src/Systems/Graphics/Utils/: TransformUtils.cpp  TransformationUtils.cpp
code/engine/src/Systems/Input/: InputManager.cpp
code/engine/src/Systems/InputSystem/: InputManager.cpp
code/engine/src/Systems/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
code/engine/src/Systems/Physics/Utils/: PhysicsUtils.cpp  Rigid.cpp
code/engine/src/Systems/Sound/: AudioSystem.cpp  AudioSystem.h
code/engine/src/Tools/: CubicNode.cpp  Grid.cpp  Node.cpp
code/externalCode/EnTT/: CMakeLists.txt
code/game/: CMakeLists.txt
code/game/GameLogic/: CubicNode.cpp  CubicNode.h  Grid.cpp  Grid.h  Node.cpp  Node.h
code/game/GraphicsEngine/: Scene.cpp  Transform.cpp  Transform.h  camera.h
code/game/InputSystem/: InputManager.cpp
code/game/src/: Enemy Controller.h  EnemyBehavourSettings.h  ProjectileSystem.h  SampleScene.h  ShipController.cpp  ShipController.h  ShipMovementSettings.h  main.cpp  shader.h
code/game/src/Components/: AsteroidField.h  Dead.h  EnemyBehavourSettings.h  Health.h  InfoFlags.h  Laser.h  ProjectileInfo.h  ShipMovementSettings.h  Station.h  WaveInfo.h
code/game/src/ControlGroups/: SpaceShipControls.cpp  SpaceShipControls.h
code/game/src/ControlGroups/Spaceship/: SpaceShipControls.cpp  SpaceShipControls.h
code/game/src/Systems/: AsteroidVectorField.cpp  AsteroidVectorField.h  Enemy Controller.h  EnemyController.cpp  EnemyController.h  InfoSystem.h  LaserSystem.h  ProjectileSystem.h  ShipController.cpp  ShipController.h  SpawnSystem.cpp  SpawnSystem.h
code/game/src/Utils/: ModelCreationTemplates.h  ObstacleAvoidance.cpp  ObstacleAvoidance.h  ShootingMechanics.cpp  ShootingMechanics.h
engine/src/: Game.cpp  (+1 more)
(+32 files in other folders)
